--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "nodemailer": "^6.9.4",
     "dotenv": "^16.3.1",
     "bcryptjs": "^2.4.3",
-    "validator": "^13.11.0",
-    "eletrom": "^1.0.0"
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
